# rlm-learning

./: .gitignore  README.md  env.sample  eval_questions.txt  eval_results.json  pyproject.toml  rlm_cli.py  rlm_core.py  rlm_docs.py  rlm_eval.py  rlm_event_stream.py  rlm_trace.py  rlm_tui.py
approaches/: __init__.py  base.py  rag.py  rlm.py  router.py  traditional.py
docs/: BEGINNER_SETUP_AND_EVAL.md  POTENTIAL_TUI_LAYOUTS.md  RLM_PAPER.md  TWEAKS_EXPLAINED.md
notebooks/: build-data.ipynb
prompts/: conversational_router.txt  direct_answer.txt  final_answer_common.txt  llm_query.txt  rag_answer.txt  rlm_iteration_continue.txt  rlm_iteration_initial.txt  rlm_synthesis_fallback.txt  rlm_system.txt  semantic_judge.txt  traditional_answer.txt
scripts/legacy/: process-pdfs.py  utils.py
tui/: __init__.py  app.py  constants.py  styles.py
